examples/test/testpolicy18820.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18820
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key8: value40
      key12: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value14
          key14: value35
          key21: value48
      podSelector:
        matchLabels:
          key31: value3
          key29: value38
